# ChangeLog for media-plugins/emotion_generic_players
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emotion_generic_players-9999 (15 Sep 2014)

  15 Sep 2014; Harold Naparst <harold@alum.mit.edu>
  +emotion_generic_players-9999.ebuild, +emotion_generic_players-9999.ebuild~,
  +metadata.xml, +metadata.xml~:
  add emotion_generic_players-9999
