@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*emotion_generic_players-1.11.0 (16 Sep 2014)
+
+  16 Sep 2014; Harold Naparst <harold@alum.mit.edu>
+  +emotion_generic_players-1.11.0.ebuild, emotion_generic_players-9999.ebuild:
+  Add emotion_generic_players-1.11.0
+
 *emotion_generic_players-9999 (15 Sep 2014)
 
   15 Sep 2014; Harold Naparst <harold@alum.mit.edu>
